[package]
name = "stark_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_json = "1.0.108"
jsonrpsee = { version = "0.21.0", features = ["client", "macros"]}
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.78"
rpc_call = { path = "../rpc_call"}
